--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
 theme: jekyll-theme-minimal
+logo: https://github.com/actbee/A-Rainy-Afternoon-in-Harajuku-1990.-/blob/master/results/C%7B$F889J4414$V(U%60JT)7%25H.png?raw=true
